--- a/arch/arm64/boot/dts/qcom/sdm439.dts
+++ b/arch/arm64/boot/dts/qcom/sdm439.dts
@@ -13,7 +13,12 @@
 	compatible = "xiaomi,pine", "qcom,sdm439";
 	chassis-type = "handset";
 
-	qcom,msm-id = <0x353 0x0>;
+    android,fstab_suffix = "mi439";
+    compatible = "qcom,sdm439\0xiaomi,pine";
+    model = "PINE QRD";
+    qcom,pmic-id = <0x10016 0x25 0x00 0x00>;
+    qcom,msm-id = <0x161 0x00>;
+    qcom.pmic-name = "PMI632";
 
 	chosen {
 		#address-cells = <0x02>;
