--- a/arch/arm64/boot/dts/qcom/sdm439.dts
+++ b/arch/arm64/boot/dts/qcom/sdm439.dts
@@ -10,14 +10,14 @@
 
 / {
 	model = "Xiaomi Redmi 7A (pine)";
-	compatible = "xiaomi,pine", "qcom,sdm439";
+	compatible = "qcom,sdm439";
+
 	chassis-type = "handset";
 
     android,fstab_suffix = "mi439";
-    compatible = "qcom,sdm439\0xiaomi,pine";
-    model = "PINE QRD";
     qcom,pmic-id = <0x10016 0x25 0x00 0x00>;
-    qcom,msm-id = <0x161 0x00>;
+	qcom,msm-id = <353 0x0>;
+    qcom,board-id = <0xb 2>;
     qcom.pmic-name = "PMI632";
 
 	chosen {
@@ -29,11 +29,11 @@
 
 		framebuffer0: framebuffer@90000000 {
 			compatible = "simple-framebuffer";
-			reg = <0x0 0x90000000 0x0 (720 * 1440 * 4)>;
+			reg = <0x0 0x90000000 0x0 (720 * 1440 * 3)>;
 			width = <720>;
 			height = <1440>;
-			stride = <(720 * 4)>;
-			format = "a8r8g8b8";
+			stride = <(720 * 3)>;
+			format = "r8g8b8";
 		};
 
 		ramoops@0 {
@@ -47,7 +47,7 @@
 
 	reserved-memory {
 		framebuffer_mem: memory@90000000 {
-			reg = <0x0 0x90000000 0x0 (720 * 1440 * 4)>;
+			reg = <0x0 0x90000000 0x0 (720 * 1440 * 3)>;
 			no-map;
 		};
 	};
